# OpenWA-Python

./: .dockerignore  .env.example  .env.minimal  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
api-gateway/: Dockerfile  database.py  dependencies.py  infra_config.json  main.py  models.py  plugin_manager.py  redis_client.py  requirements.txt  schemas.py  test_redis.py  test_rpc.py
api-gateway/routers/: api_keys.py  audit.py  auth.py  catalog.py  contacts.py  groups.py  health.py  infra.py  messages.py  plugins.py  sessions.py  stats.py  webhooks.py
dashboard/: Dockerfile  Dockerfile.traefik  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css  vite-env.d.ts
docs/: 01-project-overview.md  03-system-architecture.md  04-security-design.md  05-database-design.md  06-api-specification.md  08-development-guidelines.md  09-testing-strategy.md  10-devops-infrastructure.md  11-operational-runbooks.md  12-troubleshooting-faq.md  13-horizontal-scaling.md  15-project-roadmap.md  16-risk-management.md  18-sdk-design.md  20-community-guidelines.md  21-glossary.md  README.md
scripts/: openwa.sh
sdk/: README.md
sdk/python/: README.md  pyproject.toml
sdk/python/openwa/: __init__.py
test/: conftest.py
traefik/: dynamic.yml  traefik.yml
wa-worker/: Dockerfile  jest.config.js  package-lock.json  package.json
(+51 files in other folders)
