[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwa-sdk"
version = "1.1.1"
description = "Official Python SDK for OpenWA WhatsApp API Gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Ndeze Bonheur Emmanuel", email = "bonheurndezenc@gmail.com" }
]
keywords = [
    "whatsapp", "whatsapp-api", "api", "sdk", "openwa", 
    "python", "openwapython", "gateway", "messaging", "automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "black>=23.0",
    "isort>=5.0"
]

[project.urls]
Homepage = "https://github.com/bonheurNE07/OpenWA-Python"
Repository = "https://github.com/bonheurNE07/OpenWA-Python.git"
"Bug Tracker" = "https://github.com/bonheurNE07/OpenWA-Python/issues"
